_versions/1.7/guides/attributes.adoc
:imagesdir: /guides/images

:project-name: Quarkus
:quarkus-version: 1.7.6.Final

:maven-version: 3.6.2+
:graalvm-version: 20.1.0
:graalvm-flavor: 20.1.0-java11
:surefire-version: 3.0.0-M5
:restassured-version: 4.3.0
:gradle-version: 6.5.1

:generated-dir: ../../../_generated-config/1.7
:quarkus-home-url: https://quarkus.io
:quarkus-site-getting-started: /get-started
:quarkus-writing-extensions-guide: /guides/writing-extensions
:quarkus-site-publications: /publications
:quarkus-org-url: https://github.com/quarkusio
:quarkus-base-url: https://github.com/quarkusio/quarkus
:quarkus-clone-url: https://github.com/quarkusio/quarkus.git
:quarkus-archive-url: https://github.com/quarkusio/quarkus/archive/master.zip
:quarkus-tree-url: https://github.com/quarkusio/quarkus/tree/master
:quarkus-issues-url: https://github.com/quarkusio/quarkus/issues
:quarkus-images-url: https://github.com/quarkusio/quarkus-images/tree
:quarkus-chat-url: https://quarkusio.zulipchat.com
:quarkus-mailing-list-subscription-email: quarkus-dev+subscribe@googlegroups.com
:quarkus-mailing-list-index: https://groups.google.com/d/forum/quarkus-dev
:quickstarts-base-url: https://github.com/quarkusio/quarkus-quickstarts
:quickstarts-clone-url: https://github.com/quarkusio/quarkus-quickstarts.git
:quickstarts-archive-url: https://github.com/quarkusio/quarkus-quickstarts/archive/master.zip
:quickstarts-blob-url: https://github.com/quarkusio/quarkus-quickstarts/blob/master
:quickstarts-tree-url: https://github.com/quarkusio/quarkus-quickstarts/tree/master
